# bot-douili

./: .travis.yml  pyproject.toml
douili/: __init__.py  bot.py
tests/: test_douili.py
